--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -549,6 +549,15 @@
 \usepackage{algpseudocode}
 
 
+% ADDED PACKAGES
+
+\usepackage{booktabs}
+\usepackage[table,xcdraw]{xcolor}
+
+\usepackage{siunitx}
+
+
+
 % ----------------------------------------------------------------------
 % Define new commands to assure consistent treatment throughout document
 % ----------------------------------------------------------------------
