--- a/Thesis.tex
+++ b/Thesis.tex
@@ -193,7 +193,7 @@
 \input{Thesis_Background} % file "Thesis_Background.tex"
 \cleardoublepage
 
-\input{Thesis_Implementation} % file "Thesis_Implementation.tex"
+\input{Thesis_ComputationalMethods.tex} % file "Thesis_ComputationalMethods.tex"
 \cleardoublepage
 
 %\input{Thesis_new_file} % add new .tex files for new chapters
@@ -204,9 +204,6 @@
 
 %\input{Thesis_new_file} % add new .tex files for new chapters
 %\cleardoublepage
-
-\input{Thesis_Results} % file "Thesis_Results.tex"
-\cleardoublepage
 
 \input{Thesis_Conclusions} % file "Thesis_Conclusions.tex"
 \cleardoublepage
@@ -273,13 +270,10 @@
 % re-set arabic numbering (A.1,A.2,...) (optional, use only if chapter prefix is added)
 %\setcounter{page}{1}
 
-\input{Thesis_Appendix_A} % file "Thesis_Appendix_A.tex"
-\cleardoublepage
-
 % re-set arabic numbering (B.1,B.2,...) (optional, use only if chapter prefix is added)
 %\setcounter{page}{1}
 
-\input{Thesis_Appendix_B} % file "Thesis_Appendix_B.tex"
+\input{Thesis_Appendix_A} % file "Thesis_Appendix_A.tex"
 \cleardoublepage
 
 % ----------------------------------------------------------------------
