--- a/Thesis_Glossary.tex
+++ b/Thesis_Glossary.tex
@@ -53,11 +53,44 @@
 % The order of the definitions below is irrelevant
 % since the glossary is automatically ordered alphabetically
 
-\newacronym{mdo}{MDO}{Multidisciplinary Design Optimization}
-\newacronym{xdsm}{XDSM}{eXtended Design Structure Matrix}
-\newacronym{csm}{CSM}{Computational Structural Mechanics}
-\newacronym{cfd}{CFD}{Computational Fluid Dynamics}
-%\newacronym{⟨label⟩}{⟨abbrv⟩}{⟨full⟩}
+\newacronym{iss}{ISS}{International Space Station}
+
+\newacronym{vtc}{VTC}{Vector Thrust Control}
+\newacronym{mar}{MAR}{Mid-Air Recovery}
+
+
+\newacronym{nasa}{NASA}{National Aeronautics and Space Administration}
+
+\newacronym{esa}{ESA}{European Space Agency}
+\newacronym{EADS}{EADS Astrium}{European Aeronautic Defence and Space Company Astrium}
+
+\newacronym{armada}{ARMADA}{AutoRotation in Martian Descent And Landing}
+
+\newacronym{edls}{EDLS}{Entry, Descent and Landing System}
+
+\newacronym{rwd}{RWD}{Rotary Wing Decelerator}
+
+\newacronym{bet}{BET}{Blade Element Theory}
+
+\newacronym{leo}{LEO}{Low-Earth Orbit}
+
+\newacronym{ffu}{FFU}{Free Fall Units}
+
+\newacronym{orbc}{ORBC}{On Rocket Board computer}
+\newacronym{rxsm}{RXSM}{REXUS Service Module}
+
+\newacronym{dof}{DOF}{Degrees of Freedom}
+\newacronym{cg}{CG}{Center of Gravity}
+
+\newacronym{isa}{ISA}{International Standard Atmosphere}
+\newacronym{eam}{EAM}{Earth Atmospheric Model}
+\newacronym{e-gram}{Earth-GRAM}{Earth Global Reference Atmospheric Model}
+
+\newacronym{cfd}{CFD}{Computational fluid Dynamics}
+
+
+
+
 %\newacronym{⟨label⟩}{⟨abbrv⟩}{⟨full⟩}
 %\newacronym{⟨label⟩}{⟨abbrv⟩}{⟨full⟩}
 
