--- a/Thesis_Nomenclature.tex
+++ b/Thesis_Nomenclature.tex
@@ -42,7 +42,7 @@
 \nomenclature[g]{$\beta$}{Angle of side-slip}
 \nomenclature[g]{$\mu$}{Molecular viscosity coefficient}
 \nomenclature[g]{$\kappa$}{Thermal conductivity coefficient}
-
+\nomenclature[g]{$\psi$}{Azimutal Position}
 % ----------------------------------------------------------------------
 % Subscripts [s]
 \nomenclature[sx]{$x,y,z$}{Cartesian components}
